04_compile/grade.txt
Grading at Mon Mar  9 23:36:06 UTC 2020
Compiling your code
hello.c:1:1: error: expected identifier or ‘(’ before ‘<<’ token
 <<<<<<< HEAD
 ^
In file included from hello.c:2:0:
/usr/include/stdlib.h:139:8: error: unknown type name ‘size_t’
 extern size_t __ctype_get_mb_cur_max (void) __THROW __wur;
        ^
In file included from hello.c:2:0:
/usr/include/stdlib.h:331:4: error: unknown type name ‘size_t’
    size_t __statelen) __THROW __nonnull ((2));
    ^
/usr/include/stdlib.h:361:4: error: unknown type name ‘size_t’
    size_t __statelen,
    ^
/usr/include/stdlib.h:466:22: error: unknown type name ‘size_t’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^
/usr/include/stdlib.h:468:22: error: unknown type name ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                      ^
/usr/include/stdlib.h:468:38: error: unknown type name ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                                      ^
/usr/include/stdlib.h:480:36: error: unknown type name ‘size_t’
 extern void *realloc (void *__ptr, size_t __size)
                                    ^
In file included from /usr/include/stdlib.h:492:0,
                 from hello.c:2:
/usr/include/alloca.h:32:22: error: unknown type name ‘size_t’
 extern void *alloca (size_t __size) __THROW;
                      ^
In file included from hello.c:2:0:
/usr/include/stdlib.h:498:22: error: unknown type name ‘size_t’
 extern void *valloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^
/usr/include/stdlib.h:503:45: error: unknown type name ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                             ^
/usr/include/stdlib.h:503:65: error: unknown type name ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                                                 ^
/usr/include/stdlib.h:755:9: error: unknown type name ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
         ^
/usr/include/stdlib.h:755:25: error: unknown type name ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
                         ^
/usr/include/stdlib.h:764:34: error: unknown type name ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                  ^
/usr/include/stdlib.h:764:50: error: unknown type name ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                                  ^
/usr/include/stdlib.h:843:6: error: unknown type name ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^
/usr/include/stdlib.h:846:6: error: unknown type name ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^
/usr/include/stdlib.h:850:31: error: unknown type name ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^
/usr/include/stdlib.h:854:31: error: unknown type name ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^
/usr/include/stdlib.h:862:36: error: unknown type name ‘size_t’
 extern int mblen (const char *__s, size_t __n) __THROW;
                                    ^
/usr/include/stdlib.h:866:34: error: unknown type name ‘size_t’
      const char *__restrict __s, size_t __n) __THROW;
                                  ^
/usr/include/stdlib.h:873:8: error: unknown type name ‘size_t’
 extern size_t mbstowcs (wchar_t *__restrict  __pwcs,
        ^
/usr/include/stdlib.h:874:32: error: unknown type name ‘size_t’
    const char *__restrict __s, size_t __n) __THROW;
                                ^
/usr/include/stdlib.h:876:8: error: unknown type name ‘size_t’
 extern size_t wcstombs (char *__restrict __s,
        ^
/usr/include/stdlib.h:877:38: error: unknown type name ‘size_t’
    const wchar_t *__restrict __pwcs, size_t __n)
                                      ^
In file included from /usr/include/stdio.h:74:0,
                 from hello.c:3:
/usr/include/libio.h:302:3: error: unknown type name ‘size_t’
   size_t __pad5;
   ^
/usr/include/libio.h:305:67: error: ‘size_t’ undeclared here (not in a function)
   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
                                                                   ^
/usr/include/libio.h:333:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 typedef __ssize_t __io_read_fn (void *__cookie, char *__buf, size_t __nbytes);
                                                              ^
/usr/include/libio.h:342:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __n);
      ^
/usr/include/libio.h:464:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘_IO_sgetn’
 extern _IO_size_t _IO_sgetn (_IO_FILE *, void *, _IO_size_t);
                   ^
In file included from hello.c:3:0:
/usr/include/stdio.h:319:35: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *fmemopen (void *__s, size_t __len, const char *__modes)
                                   ^
/usr/include/stdio.h:325:47: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *open_memstream (char **__bufloc, size_t *__sizeloc) __THROW __wur;
                                               ^
/usr/include/stdio.h:337:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
       int __modes, size_t __n) __THROW;
                    ^
/usr/include/stdio.h:344:10: error: expected declaration specifiers or ‘...’ before ‘size_t’
          size_t __size) __THROW;
          ^
/usr/include/stdio.h:386:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int snprintf (char *__restrict __s, size_t __maxlen,
                                            ^
/usr/include/stdio.h:390:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int vsnprintf (char *__restrict __s, size_t __maxlen,
                                             ^
/usr/include/stdio.h:666:11: error: expected declaration specifiers or ‘...’ before ‘size_t’
           size_t *__restrict __n, int __delimiter,
           ^
/usr/include/stdio.h:669:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t *__restrict __n, int __delimiter,
         ^
/usr/include/stdio.h:679:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t *__restrict __n,
        ^
/usr/include/stdio.h:709:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 extern size_t fread (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:715:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
 extern size_t fwrite (const void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:737:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
 extern size_t fread_unlocked (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:739:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite_unlocked’
 extern size_t fwrite_unlocked (const void *__restrict __ptr, size_t __size,
               ^
hello.c: In function ‘main’:
hello.c:8:1: error: expected expression before ‘==’ token
 =======
 ^
hello.c:14:9: error: invalid suffix "c91e2965c46ee4b5e0ca831e77783ef" on integer constant
 >>>>>>> 940497532c91e2965c46ee4b5e0ca831e77783ef
         ^
hello.c:16:1: error: expected declaration or statement at end of input
 }
 ^
Your code did not compile

Overall Grade: FAILED
